<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">check.toe</string>
    
    <string name="title_activity_signup">가입</string>
    <string name="title_activity_signin">로그인</string>
    <string name="title_activity_facebook_sample">Facebook</string>
    <string name="title_activity_my_checklist">내 체크리스트</string>
    <string name="title_activity_recomment_checklist">추천 체크리스트</string>
    <string name="title_activity_favorite_checklist">즐겨찾기</string>
    <string name="title_activity_friend">친구관리</string>
    <string name="title_activity_profile">프로필</string>
    <string name="title_activity_checkitem">체크리스트</string>
    <string name="title_activity_new_checklist">체크리스트 추가</string>
    <string name="title_activity_edit_checklist">체크리스트 수정</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_helpcenter">Help</string>
    
    <string name="hello_baasio">Hello baas.io!</string>
    <string name="save_baasio">baas.io 시작하기</string>
    <string name="get_baasio">확인하기</string>
    <string name="success_baasio">축하드립니다.\n\nbaas.io에 첫 엔터티가 생성되었습니다.!!!</string>

    <string name="label_back_to_finish">종료하시려면 한번 더 눌러주세요.</string>
    
    <!-- 공통 -->
    <string name="label_confirm">확인</string>
    
    <string name="created_time"><xliff:g id="time">%s</xliff:g>에 작성</string>
    <string name="modified_time"><xliff:g id="time">%s</xliff:g>에 수정</string>
    
    <string name="progress_dialog_loading">잠시만 기다려주세요.</string>
    <string name="progress_dialog_saving">저장중입니다.\n잠시만 기다려주세요.</string>
    <string name="progress_dialog_removing">삭제중입니다.\n잠시만 기다려주세요.</string>
    
    <!-- Checklist -->
    <string name="empty_checklist">체크리스트가 없습니다.</string>
    <string name="menu_new_checklist">새로운 체크리스트</string>
    <string name="menu_edit_checklist">체크리스트 수정</string>
    <string name="menu_remove_checklist">체크리스트 삭제</string>
    
    <string name="menu_finish">완료</string>
    <string name="menu_cancel">취소</string>
    
    <string name="success_add_checklist">체크리스트가 저장되었습니다.</string>
    <string name="fail_add_checklist">체크리스트가 저장에 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <string name="success_remove_checklist">체크리스트가 삭제되었습니다.</string>
    <string name="fail_remove_checklist">체크리스트 삭제에 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <string name="error_unknown">알수없음</string>
    
    <string name="error_no_title">제목을 입력해주세요.</string>
    <string name="error_no_description">설명을 입력해주세요.</string>
    <string name="error_no_tag">태그를 입력해주세요.</string>
    
    <!-- Checkitem -->
    <string name="empty_checkitem">체크아이템이 없습니다.</string>
    
    <string name="menu_add_favorite">즐겨찾기 추가</string>
    <string name="menu_remove_favorite">즐겨찾기 삭제</string>
    
    <string name="menu_clone_checklist">체크리스트 복사해오기</string>
    
    <string name="menu_add_checkitem">체크아이템 추가</string>
    <string name="menu_edit_checkitem">체크아이템 수정</string>
    <string name="menu_remove_checkitem">체크아이템 삭제</string>
    
    <string name="success_clone_checklist">체크리스트를 가져왔습니다.</string>
    <string name="fail_clone_checklist">체크리스트를 가져오는데 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <!-- Search -->
    <string name="search_label">체크리스트 검색</string>
    <string name="search_hint">검색할 단어</string>
    <string name="search_description">체크리스트를 검색합니다.</string>
    <string name="search_title">\'<xliff:g id="query">%s</xliff:g>\'의검색 결과</string>
    
    <!-- 친구리스트 -->
    <string name="tab_following">팔로잉</string>
    <string name="tab_follower">팔로워</string>
    <string name="empty_user">검색된 유저가 없습니다.</string>
    <string name="empty_follower">follow하는 친구가 없습니다.</string>
    <string name="empty_following">follow하고 있는 친구가 없습니다.</string>
    
    <!-- 프로파일 -->
    <string name="label_follow">FOLLOW</string>
    <string name="label_unfollow">UNFOLLOW</string>
    <string name="label_created_user"><xliff:g id="date">%s</xliff:g>에 가입</string>
    <string name="label_modified_user"><xliff:g id="date">%s</xliff:g>에 수정</string>
    
    <string name="label_profile_empty_comment">댓글이 없습니다.</string>
    <string name="hint_profile_comment">댓글을 남기세요.</string>
    <string name="label_profile_write_comment">쓰기</string>
    
    <string name="label_profile_created_comment"><xliff:g id="date">%s</xliff:g> 작성</string>
    
    <string name="error_get_profile">프로필 정보를 받아오는데에 실패하였습니다.</string>
    <string name="error_comment_no_content">댓글을 입력해주세요.</string>
    <string name="error_comment_need_login">로그인을 해주세요.</string>
    
    <string name="success_write_comment">댓글을 성공하였습니다.</string>
    <string name="fail_write_comment">댓글을 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <string name="success_following">팔로우하였습니다.</string>
    <string name="fail_following">팔로우를 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <string name="success_unfollowing">언팔로우하였습니다.</string>
    <string name="fail_unfollowing">언팔로우를 실패하였습니다. 이유:<xliff:g id="error">%s</xliff:g></string>
    
    <!-- 시간 -->
    <string name="time_now">지금</string>
    <string name="time_sec">초 전</string>
    <string name="time_min">분 전</string>
    <string name="time_one_min">1분 전</string>
    <string name="time_one_hour">1시간 전</string>
    <string name="time_hour">시간 전</string>
    <string name="time_one_day">어제</string>
    <string name="time_day">일 전</string>
    <string name="time_one_weeks">1주 전</string>
    <string name="time_week">주 전</string>
    <string name="time_one_month">1개월 전</string>
    <string name="time_month">개월 전</string>
    <string name="time_one_year">1년 전</string>
    <string name="time_year">년 전</string>
    
    <!-- Facebook app_id -->
    <string name="app_id">510355658975579</string>
    
    <!-- 로그인/가입 -->
    <string name="content_description_baasio_logo">baas.io</string>
    
    <string name="error_invalid_email">이메일 주소를 확인해주세요.</string>
    <string name="error_invalid_name">이름을 확인해주세요.</string>
    <string name="error_invalid_password">비밀번호를 확인해주세요.</string>
    <string name="error_invalid_grant">이메일 주소 또는 비밀번호를 확인해주세요.</string>
    <string name="error_already_exist">이미 가입된 사용자입니다.</string>
    
    <string name="error_signin_facebook">Facebook 로그인에 실패하였습니다.</string>
    <string name="error_signup_facebook">Facebook 가입에 실패하였습니다.</string>
    
    <string name="msg_signin_success">로그인 되었습니다.</string>
    <string name="msg_signup_success">가입에 성공하셨습니다.</string>
    
    <string name="hint_email">이메일 주소</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_verify">비밀번호 확인</string>
    <string name="hint_name">이름</string>
    
    <string name="label_signup_via_facebook">Facebook으로 가입하기</string>
    <string name="label_signin_via_facebook">Facebook으로 로그인하기</string>
    <string name="label_need_signup">아이디가 없으신가요?</string>
    <string name="label_already_signuped">이미 가입하셨나요?</string>
    
    <!-- SlidingMenu -->
    <string name="label_login">로그인</string>
    <string name="label_logout">로그아웃</string>
    
    <string name="msg_signout_success">로그아웃되었습니다.</string>
</resources>